# microsoft-fabric-schema-drift-detection

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  co-author.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: new-backend.md
.github/workflows/: ci.yml  drift-check.yml  workflow.yml
docs/: AGENTS.md  ARCHITECTURE.md  BACKENDS.md  CROSS_WORKSPACE.md  DEMO.md  FABRIC_NATIVE.md  FABRIC_SETUP.md
examples/: lineage.example.yaml
fabric/: deploy-config.yml  parameter.yml
fabric/DriftCheckPipeline.DataPipeline/: .platform  pipeline-content.json
fabric/DriftDetection.Notebook/: .platform  notebook-content.py
fabric_drift_detective/: __main__.py  cli.py  fabric_rest.py  git_handler.py  medallion.py  schema_diff.py  schema_store.py
fabric_drift_detective/agents/: definitions.py  tools.py
fabric_drift_detective/backends/: __init__.py  base.py  cosmos_backend.py  databricks_backend.py  fabric_backend.py  hana_backend.py  local_backend.py  mysql_backend.py  postgres_backend.py  redshift_backend.py  snowflake_backend.py  sql_catalog_base.py  sqlserver_backend.py
fabric_drift_detective/notifications/: outlook_channel.py  teams_channel.py
pbip_reports/definition/tables/: Dim_Customer.tmdl
sample_data/: build_medallion.py  inject_drift.py  load_adventureworks.py  workspaces.json
scripts/: deploy_fabric.sh  provision_fabric.sh  run_demo.sh
src/: __init__.py  azure_auth.py  config.py  fabric_cli.py  fabric_rest.py  git_handler.py  lineage.py  lineage_manifest.py  llm_reasoner.py  medallion.py  schema_diff.py  schema_store.py  workspace.py
src/agents/: __init__.py  definitions.py  runtime.py  tools.py
src/backends/: __init__.py  base.py  fabric_backend.py  local_backend.py  sql_catalog_base.py  type_normalize.py
src/notifications/: __init__.py  base.py  console_channel.py  dispatcher.py  slack_channel.py
src/prompts/: __init__.py  commit_message.py  fix_suggestion.py  impact_analysis.py
tests/: conftest.py  test_agents.py  test_azure_auth.py  test_config.py  test_cross_workspace_lineage.py  test_fabric_backend.py  test_fabric_cli.py  test_fabric_rest.py  test_git_handler.py  test_lineage.py  test_lineage_manifest.py  test_llm_reasoner.py  test_local_backend.py  test_main_baseline_policy.py  test_notifications.py  test_schema_diff.py  test_schema_store.py  test_scope.py  test_workspace.py
tests/backends/: backend_contract.py  test_contract_local.py  test_cosmos_backend.py  test_databricks_backend.py  test_hana_backend.py  test_mysql_backend.py  test_postgres_backend.py  test_redshift_backend.py  test_snowflake_backend.py  test_sql_catalog_base.py  test_sqlserver_backend.py  test_type_normalize.py
